RESOLVED FIXED228717
Don't change invalid baseURLs from loadData or loadHTMLString to about:blank
https://bugs.webkit.org/show_bug.cgi?id=228717
Summary Don't change invalid baseURLs from loadData or loadHTMLString to about:blank
Alex Christensen
Reported 2021-08-02 14:45:41 PDT
Don't change invalid baseURLs from loadData or loadHTMLString to about:blank
Attachments
Patch (3.69 KB, patch)
2021-08-02 14:49 PDT, Alex Christensen
cdumez: review+
Alex Christensen
Comment 1 2021-08-02 14:49:05 PDT
Alex Christensen
Comment 2 2021-08-02 14:49:08 PDT
Alex Christensen
Comment 3 2021-08-02 15:05:00 PDT
Note You need to log in before you can comment on or make changes to this bug.